--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 </body>
 <script>
   (function() {
-    if("serviceWorker" in navigtor) {
+    if("serviceWorker" in navigator) {
       navigator.serviceWorker.register("./service-worker.js")
         .then(() => console.log('Service Worker registered successfully.'))
         .catch(err => console.log('Service Worker registration failed:', err));
